objects/Points__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Points Transactions</relationshipLabel>
        <relationshipName>Points_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Redeem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Redeem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Points_Date__c</fullName>
        <label>Points Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Points Transactions</relationshipLabel>
        <relationshipName>Points_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student/Section</label>
        <referenceTo>Student_Section__c</referenceTo>
        <relationshipLabel>Points Transactions</relationshipLabel>
        <relationshipName>Points_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Points Transactions</relationshipLabel>
        <relationshipName>Points_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Points Transaction</label>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Points Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>